# RAG-against-the-machine

./: .gitignore  CLAUDE.md  QUICK_REFERENCE.md  README_TESTING.md  SUMMARY.md  TESTING_GUIDE.md  VLLM_TESTING.md  main.py  pyproject.toml  quick_demo.sh  test_system.py  test_vllm.py
data/datasets/: sample_questions.json  vllm_questions.json
data/output/: test_report.json
data/output/answers/: single_query.json
data/output/search_results/: sample_questions.json  single_query.json  vllm_questions.json
data/output/test_results/: test_answer.json
data/vllm_indexes/: bm25_index.json
data/vllm_tests/: vllm_answers.json  vllm_search_results.json  vllm_test_report.json
src/: __main__.py
src/chunking/: base.py  code_chunker.py  doc_chunker.py
src/evaluation/: metrics.py
src/generation/: llm_client.py
src/indexing/: indexer.py
src/models/: data_models.py
src/retrieval/: bm25.py
